--- a/firstsite.html
+++ b/firstsite.html
@@ -5,6 +5,9 @@
     <title>Harvey, Jack - MTG Website</title>
   </head>
   <body >
+    <h1 style="font-size:90px; border:5px #1F5857;">Magic: The Gathering</h1>
+      <p>A collectible card game<br>that is much better<br>than any other you think you've played.</p>
+    <hr>
     
   </body>
 </html>
