added haiku using <pre> format preservation, haiku heading

--- a/firstsite.html
+++ b/firstsite.html
@@ -8,6 +8,12 @@
     <h1 style="font-size:90px; border:5px #1F5857;">Magic: The Gathering</h1>
       <p>A collectible card game<br>that is much better<br>than any other you think you've played.</p>
     <hr>
-    
+
+    <h2>A Haiku About Magic</h2>
+      <pre>
+        An eternal choice
+        Grapple with the decision
+        Where do I put cards?
+      </pre>
   </body>
 </html>
