added link formatting (when stable, hover, clicked), target, href <a> description

--- a/firstsite.html
+++ b/firstsite.html
@@ -15,5 +15,31 @@
         Grapple with the decision
         Where do I put cards?
       </pre>
+
+      <style>
+        a:link {
+          color: green;
+          background-color: transparent;
+          text-decoration: overline;
+        }
+        a:visited {
+          color: blue;
+          background-color: transparent;
+          text-decoration: underline;
+        }
+        a:hover {
+          color: red;
+          background-color: transparent:
+          text-decoration: line-through;
+        }
+        a:active {
+          color: yellow;
+          background-color: transparent;
+          text-decoration: none;
+
+        }
+        </style>
+        <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
+      <hr>
   </body>
 </html>
