added <p> for image intro (styled, partial quote), img src/alt

--- a/firstsite.html
+++ b/firstsite.html
@@ -41,5 +41,9 @@
         </style>
         <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
       <hr>
+
+      <p style="font-size:130%;">An example MTG card - The Black Lotus, <q>sold at auction on eBay for $511,100.</q></p>
+      <img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus">
+      
   </body>
 </html>
