--- a/firstsite.html
+++ b/firstsite.html
@@ -50,6 +50,11 @@
         In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.
       </blockquote>
     <hr>
-    
+
+    <h2>Some Basics</h2>
+      <ul>
+        <li></li>
+      </ul>
+      
   </body>
 </html>
