added lists for bottom: getting started with MTG

--- a/firstsite.html
+++ b/firstsite.html
@@ -43,18 +43,51 @@
     <hr>
 
     <p style="font-size:130%;">An example MTG card - The Black Lotus, <q>sold at auction on eBay for $511,100.</q></p>
-    <img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus">
+      <img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus">
 
       <p>Here's what CBR.com (media commentary website) had to say:</p>
-      <blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/">
-        In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.
-      </blockquote>
+        <blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/">
+          In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.
+        </blockquote>
     <hr>
 
-    <h2>Some Basics</h2>
-      <ul>
-        <li></li>
-      </ul>
-      
+    <h2>Are You Ready to Play?</h2>
+    <p>Here's some basics...<br><br><strong>What your turn will look like.</strong></p>
+      <dl>
+        <dt>Begin</dt>
+          <dd>Untap lands and creatures so they may become usuable again</dd>
+          <dd>Draw a card (must have 7 cards or less in hand)</dd>
+        <dt>Main Phase</dt>
+          <dd>Play a land (only one per turn)</dd>
+          <dd>Cast creatures and/or sorceries</dd>
+        <dt>Combat</dt>
+          <dd>Declare attackers</dd>
+          <dd>Opponent declares blockers</dd>
+          <dd>Combat damage is dealt</dd>
+        <dt>Second Main Phase</dt>
+          <dd>Play a land (if you haven't already)</dd>
+          <dd>Cast creatures and/or sorceries</dd>
+        <dt>End</dt>
+          <dd>Your creatures heal</dd>
+          <dd>Discard any extra cards in hand</dd>
+          <dd>Pass the turn to your opponent</dd>
+      </dl>
+
+      <p><strong>The different styles of decks, ranked as best to worst by ME!</strong></p>
+        <ol>
+          <li>Midrange: a combonation of both aggro and control, midrange decks have cards that continuously generate value throughout the game</li>
+          <li>Combo: these decks rely on synergy between cards, or how well one can activate the other - they usually try to win in a couple turns, focusing on a single type of combo</li>
+          <li>Aggro: lots of low-cost cards that deal damage quickly, before the opponent can react</li>
+          <li>Control: control decks are all about disrupting the opposing attempt to play the game, usually with compounding sorceries and use of "the stack" (the order in which spells resolve)</li>
+        </ol>
+
+
+      <p><strong>Here's the different types of cards (called "spells")...</strong></p>
+        <ul>
+          <li>Permanents: Lands, creatures, and basically anything that doesn't resolve and go into your graveyard immediately after casting.</li>
+          <li>Instants: You can play these at any time. It's usually useful to have enough mana (untapped lands) left over so they are "quickdrawable."</li>
+          <li>Sorceries: These spells are generally more powerful than instants, and can only be played during your turn.</li>
+        </ul>
+
   </body>
 </html>
