used table to create side-by-side image and blockquote text

--- a/firstsite.html
+++ b/firstsite.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Harvey, Jack - MTG Website</title>
+    <link rel="icon" type="image/x-image" href="/favicon.ico">
   </head>
   <body >
     <h1 style="font-size:90px; border:5px #1F5857;">Magic: The Gathering</h1>
@@ -42,13 +43,13 @@
         <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
     <hr>
 
-    <p style="font-size:130%;">An example MTG card - The Black Lotus, <q>sold at auction on eBay for $511,100.</q></p>
-      <img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus">
-
-      <p>Here's what CBR.com (media commentary website) had to say:</p>
-        <blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/">
-          In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.
-        </blockquote>
+    <h2>A Real Collector's MTG Card</h2>
+      <table>
+        <tr>
+          <td>The Black Lotus, <q>sold at auction on eBay for $511,100.</q><br><img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus"></td>
+          <td>Here's what CBR.com (media commentary website) had to say:<br><blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/">In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.</blockquote></td>
+        </tr>
+      </table>
     <hr>
 
     <h2>Are You Ready to Play?</h2>
