--- a/firstsite.html
+++ b/firstsite.html
@@ -3,10 +3,44 @@
   <head>
     <meta charset="utf-8">
     <title>Harvey, Jack - MTG Website</title>
-    <link rel="icon" type="image/x-image" href="/favicon.ico">
+      <link rel="icon" type="image/x-image" href="/favicon.ico">
+
+    <style>
+      .tab {
+        overflow: hidden;
+        border: 1px solid;
+        background-color: #043D9C;
+      }
+
+      .tab button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: crosshair;
+        padding: 15px;
+        transition: 0.3s;
+        font-size: 17px;
+      }
+
+      .tab button:hover {
+        background-color: ##32CD32
+      }
+
+      .tab button.active {
+        background-color: #ccc
+      }
+
+      .tabcontent {
+        display: none;
+        padding: 6px 12px;
+        border: 1px solid #ccc;
+        border-top: none;
+      }
+    </style>
   </head>
   <body >
-    <h1 style="font-size:90px; border:5px #1F5857;">Magic: The Gathering</h1>
+    <h1 style="font-size: 90px; border: 5px #1F5857;">Magic: The Gathering</h1>
       <p>A collectible card game<br>that is much better<br>than any other you think you've played.</p>
     <hr>
 
@@ -44,10 +78,15 @@
     <hr>
 
     <h2>A Real Collector's MTG Card</h2>
+      <style>
+        th, td {
+          padding:15px;
+        }
+      </style>
       <table>
         <tr>
           <td>The Black Lotus, <q>sold at auction on eBay for $511,100.</q><br><img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus"></td>
-          <td>Here's what CBR.com (media commentary website) had to say:<br><blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/">In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.</blockquote></td>
+          <td>Here's what CBR.com (media commentary website) had to say:<br><blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/"><em>In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.</em></blockquote></td>
         </tr>
       </table>
     <hr>
