--- a/firstsite.html
+++ b/firstsite.html
@@ -70,8 +70,9 @@
     <hr>
 
     <div class="tab">
-      <button class="button" class="tablinks" onclick="openCity(event, 'An Intro')"><span>An Intro</span></button>
-      <button class="button" class="tablinks" onclick="openCity(event, 'Getting Started')"><span>Getting Started</span></button>
+      <button class="button" class="tablinks" onclick="openTab(event, 'An Intro')"><span>An Intro</span></button>
+      <button class="button" class="tablinks" onclick="openTab(event, 'Getting Started')"><span>Getting Started</span></button>
+      <button class="button" class="tablinks" onclick="openTab(event, 'Media and Misc.')"><span>Media and Misc.</span></button>
     </div>
 
     <div id="An Intro" class="tabcontent">
@@ -163,9 +164,12 @@
           </ul>
     </div>
 
+    <div id="Media and Mis." class="tabcontent">
+
+    </div>
 
     <script>
-      function openCity(evt, cityName) {
+      function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tabcontent");
         for (i = 0; i < tabcontent.length; i++) {
@@ -175,7 +179,7 @@
         for (i = 0; i < tablinks.length; i++) {
           tablinks[i].className = tablinks[i].className.replace(" active", "");
         }
-        document.getElementById(cityName).style.display = "block";
+        document.getElementById(tabName).style.display = "block";
         evt.currentTarget.className += " active";
       }
     </script>
