--- a/firstsite.html
+++ b/firstsite.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1">
-  <title>Jack's MTG Site</title>
+  <title>ℑᗩᏨЌ ℋ₳尺Ꮙ∑ϒ: MTG</title>
     <link rel="icon" type="image/icon" href="/favicon.ico">
     <style>
       .tab {
@@ -14,7 +14,7 @@
       .tab button {
         background-color: inherit;
         float: left;
-        border: none;
+        border: #ccc;
         outline: none;
         cursor: crosshair;
         padding: 15px;
@@ -52,12 +52,12 @@
       }
 
       .tab button.active {
-        background-color: #ccc;
+        background-color: #32CD32;
       }
 
       .tabcontent {
         display: none;
-        padding: 6px 12px;
+        padding: 12px 24px;
         border: 1px solid #ccc;
         border-top: none;
       }
@@ -65,8 +65,8 @@
   </head>
 
   <body>
-    <h1 style="font-size: 90px; border: 5px #1F5857;">Magic: The Gathering</h1>
-      <p>A collectible card game<br>that is much better<br>than any other you think you've played.</p>
+    <h1 style="font-size: 90px; border: 5px #1F5857; background-color: #00CC73;">Magic: The Gathering</h1>
+      <p>A collectible card game<br>that is much better<br>than any other<sub>you think you've played</sub>.</p>
     <hr>
 
     <div class="tab">
@@ -75,7 +75,7 @@
       <button class="button" class="tablinks" onclick="openTab(event, 'Media and Misc.')"><span>Media and Misc.</span></button>
     </div>
 
-    <div id="An Intro" class="tabcontent">
+    <div id="An Intro" class="tabcontent" style="background-color: gainsboro;">
       <h2>A Haiku About Magic</h2>
         <pre>
           An eternal choice
@@ -121,10 +121,9 @@
             <td>Here's what CBR.com (media commentary website) had to say:<br><blockquote cite="https://www.cbr.com/magic-gathering-mtg-black-lotuses-remaining/"><em>In Magic: The Gathering, there is a set of cards known as the Power Nine. These are considered to be the most powerful from M:TG's original print run, making them incredibly valuable to collectors. However, none of the Power Nine cards are as valuable as the Black Lotus card. In fact, the card's legendary status has lead to it being banned in almost every form of competitive play.</em></blockquote></td>
           </tr>
         </table>
-      <hr>
     </div>
 
-    <div id="Getting Started" class="tabcontent">
+    <div id="Getting Started" class="tabcontent" style="background-color: gainsboro;">
       <h2>Are You Ready to Play?</h2>
         <p>Here's some basics...<br><br><strong>What your turn will look like.</strong></p>
           <dl>
@@ -164,8 +163,10 @@
           </ul>
     </div>
 
-    <div id="Media and Mis." class="tabcontent">
-
+    <div id="Media and Misc." class="tabcontent" style="background-color: gainsboro;">
+      <h2>Let's do things with Magic! ... But what?</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0iCtC-EOzEo?" title="Haha imagine..."></iframe>
+        <h3 style="color:blue;">Wait! That's not what we want! Let's see some cool card art!</h3>
     </div>
 
     <script>
