--- a/firstsite.html
+++ b/firstsite.html
@@ -5,6 +5,11 @@
   <title>ℑᗩᏨЌ ℋ₳尺Ꮙ∑ϒ: MTG</title>
     <link rel="icon" type="image/icon" href="/favicon.ico">
     <style>
+      img {
+        width: 300px;
+        height: 400px;
+      }
+
       .tab {
         overflow: hidden;
         border: 1px solid #ccc;
@@ -72,7 +77,7 @@
     <div class="tab">
       <button class="button" class="tablinks" onclick="openTab(event, 'An Intro')"><span>An Intro</span></button>
       <button class="button" class="tablinks" onclick="openTab(event, 'Getting Started')"><span>Getting Started</span></button>
-      <button class="button" class="tablinks" onclick="openTab(event, 'Media and Misc.')"><span>Media and Misc.</span></button>
+      <button class="button" class="tablinks" onclick="openTab(event, 'Media')"><span>Media</span></button>
     </div>
 
     <div id="An Intro" class="tabcontent" style="background-color: gainsboro;">
@@ -107,6 +112,7 @@
           }
           </style>
             <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
+            <p>(Not a Rickroll.)</p>
       <hr>
 
       <h2>A Real Collector's MTG Card</h2>
@@ -163,10 +169,17 @@
           </ul>
     </div>
 
-    <div id="Media and Misc." class="tabcontent" style="background-color: gainsboro;">
+    <div id="Media" class="tabcontent" style="background-color: gainsboro;">
       <h2>Let's do things with Magic! ... But what?</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0iCtC-EOzEo?" title="Haha imagine..."></iframe>
-        <h3 style="color:blue;">Wait! That's not what we want! Let's see some cool card art!</h3>
+        <h3 style="color:red;">Wait! That's not what we want! Where did that card art go?</h3>
+          <img src="https://images.saymedia-content.com/.image/t_share/MTc5MjE4MTk2NTczMDA1MzAw/blue-artwork-mtg.jpg" alt="Lunar Mystic, Human Wizard">
+          <img src="https://i.pinimg.com/736x/11/0a/da/110adab6c686de0f3af0ba409c8e7f08--geek-dragon.jpg" alt="Shivan Dragon, Dragon">
+          <img src="https://i.pinimg.com/736x/0e/e8/40/0ee84049383d152978ed63be7ecd20ab.jpg" alt="Vastwood Animist, Elf Shaman Ally">
+          <img src="https://images.saymedia-content.com/.image/c_limit%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_700/MTc4MDA3MDE0NzIxOTIyNjY0/self-reviving-black-creatures-mtg.jpg" alt="Dread Wanderer, Zombie Jackal">
+          <img src="https://www.trader-online.de/out/pictures/master/product/1/M20-E004.jpg" alt="Angel of Vitality, Angel">
+          <img src="https://d2a6pxjvsktfgo.cloudfront.net/card-images/sets/en/hou/nicol-bolas-god-pharaoh-140.jpg" alt="Nicol Bolas, God-Pharoah">
+          <img src="https://usercontent2.hubstatic.com/14449309_f1024.jpg" alt="Repudiate/Replicate, Instant/Sorcery" style="width:550px; height:400px;">
     </div>
 
     <script>
