fixed favicon issue, changed link bookmark to media/card photo tab

--- a/firstsite.html
+++ b/firstsite.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1">
+  <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.000">
   <title>ℑᗩᏨЌ ℋ₳尺Ꮙ∑ϒ: MTG</title>
-    <link rel="icon" type="image/icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <style>
       img {
         width: 300px;
@@ -171,8 +171,9 @@
 
     <div id="Media" class="tabcontent" style="background-color: gainsboro;">
       <h2>Let's do things with Magic! ... But what?</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0iCtC-EOzEo?" title="Haha imagine..."></iframe>
-        <h3 style="color:red;">Wait! That's not what we want! Where did that card art go?</h3>
+        <a href="#Cards">Skip that Video...<br><a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0iCtC-EOzEo?autoplay=1&mute=1&controls=0" title="Haha imagine..."></iframe>
+        <h3 id="Cards" style="color:red;">Wait! Where did that card art go?</h3>
           <img src="https://images.saymedia-content.com/.image/t_share/MTc5MjE4MTk2NTczMDA1MzAw/blue-artwork-mtg.jpg" alt="Lunar Mystic, Human Wizard">
           <img src="https://i.pinimg.com/736x/11/0a/da/110adab6c686de0f3af0ba409c8e7f08--geek-dragon.jpg" alt="Shivan Dragon, Dragon">
           <img src="https://i.pinimg.com/736x/0e/e8/40/0ee84049383d152978ed63be7ecd20ab.jpg" alt="Vastwood Animist, Elf Shaman Ally">
