--- a/firstsite.html
+++ b/firstsite.html
@@ -3,70 +3,8 @@
   <head>
     <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.000">
     <title>ℑᗩᏨЌ ℋ₳尺Ꮙ∑ϒ: MTG</title>
-      <link rel="shortcut icon" href="favicon.ico">
-      <style>
-        img {
-          width: 300px;
-          height: 400px;
-        }
-
-        .tab {
-          overflow: hidden;
-          border: 1px solid #ccc;
-          background-color: #043D9C;
-        }
-
-        .tab button {
-          background-color: inherit;
-          float: left;
-          border: #ccc;
-          outline: none;
-          cursor: crosshair;
-          padding: 15px;
-          transition: 0.3s;
-          font-size: 17px;
-        }
-
-        .button span {
-          cursor: crosshair;
-          display: inline-block;
-          position: relative;
-          transition: 0.4s;
-        }
-
-        .button span:after {
-          content: '\00bb';
-          position: absolute;
-          opacity: 0;
-          top: 0;
-          right: -20px;
-          transition: 0.4s;
-        }
-
-        .tab button:hover {
-          background-color: #32CD32;
-        }
-
-        .button:hover span {
-          padding-right: 25px;
-        }
-
-        .button:hover span:after {
-          opacity: 1;
-          right: 0;
-        }
-
-        .tab button.active {
-          background-color: #32CD32;
-        }
-
-        .tabcontent {
-          display: none;
-          padding: 12px 24px;
-          border: 1px solid #ccc;
-          border-top: none;
-        }
-      </style>
+      <link rel="icon" type="image/ico" href="favicon.ico">
+      <link rel="stylesheet" href="firstsiteStyle.css">
   </head>
 
   <body>
@@ -80,39 +18,15 @@
       <button class="button" class="tablinks" onclick="openTab(event, 'Media')"><span>Media</span></button>
     </div>
 
-    <div id="An Intro" class="tabcontent" style="background-color: gainsboro;">
+    <div id="An Intro" class="tabcontent">
       <h2>A Haiku About Magic</h2>
         <pre>
           An eternal choice
           Grapple with the decision
           Where do I put cards?
         </pre>
-
-        <style>
-          a:link {
-            color: green;
-            background-color: transparent;
-            text-decoration: overline;
-          }
-          a:visited {
-            color: blue;
-            background-color: transparent;
-            text-decoration: underline;
-          }
-          a:hover {
-            color: red;
-            background-color: transparent:
-            text-decoration: line-through;
-          }
-          a:active {
-            color: yellow;
-            background-color: transparent;
-            text-decoration: none;
-
-          }
-          </style>
-            <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
-              <p>(Not a Rickroll.)</p>
+        <a href="https://gatherer.wizards.com/Pages/Default.aspx/" target="_blank">A website to find specific cards - the deckbuilder's dream.</a>
+          <p>(Not a Rickroll.)</p>
       <hr>
 
       <h2>A Real Collector's MTG Card</h2>
@@ -129,7 +43,7 @@
         </table>
     </div>
 
-    <div id="Getting Started" class="tabcontent" style="background-color: gainsboro;">
+    <div id="Getting Started" class="tabcontent">
       <h2>Are You Ready to Play?</h2>
         <p>Here's some basics...<br><br><strong>What your turn will look like.</strong></p>
           <dl>
@@ -169,10 +83,11 @@
           </ul>
     </div>
 
-    <div id="Media" class="tabcontent" style="background-color: gainsboro;">
+    <div id="Media" class="tabcontent">
       <h2>Let's do things with Magic! ... But what?</h2>
         <a href="#Cards">Skip that Video...<br><a>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0iCtC-EOzEo?autoplay=1&mute=1&controls=0" title="Haha imagine..."></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Xz3C9VbKA74?start=3&autoplay=1&mute=1&controls=0" title="Haha imagine..."></iframe>
+          <!-- have to mute embedded video or will not autoplay in chrome, firefox, or edge -->
         <h3 id="Cards" style="color:red;">Wait! Where did that card art go?</h3>
           <img src="https://images.saymedia-content.com/.image/t_share/MTc5MjE4MTk2NTczMDA1MzAw/blue-artwork-mtg.jpg" alt="Lunar Mystic, Human Wizard">
           <img src="https://i.pinimg.com/736x/11/0a/da/110adab6c686de0f3af0ba409c8e7f08--geek-dragon.jpg" alt="Shivan Dragon, Dragon">
