--- a/firstsite.html
+++ b/firstsite.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en-US">
     <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.000">
     <title>ℑᗩᏨЌ ℋ₳尺Ꮙ∑ϒ: MTG</title>
       <link rel="icon" type="image/ico" href="favicon.ico">
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <h1 style="font-size: 90px; border: 5px #1F5857; background-color: #00CC73;">Magic: The Gathering</h1>
-      <p>A collectible card game<br>that is much better<br>than any other<sub>you think you've played</sub>.</p>
+    <h1 style="font-size: 90px; border: 5px #1F5857; background-color: #00CC73; outline-style:double;">Magic: The Gathering</h1>
+      <p>A collectible card game<br>that is much better<br>than <sup>any</sup> other<sub>you think you've played</sub>.</p>
     <hr>
 
     <div class="tab">
@@ -30,11 +30,6 @@
       <hr>
 
       <h2>A Real Collector's MTG Card</h2>
-        <style>
-          th, td {
-            padding:15px;
-          }
-        </style>
         <table>
           <tr>
             <td>The Black Lotus, <q>sold at auction on eBay for $511,100.</q><br><img src="https://static.cardkingdom.com/images/magic-the-gathering/alpha/black-lotus-28010.jpg" alt="Black Lotus"></td>
@@ -86,8 +81,8 @@
     <div id="Media" class="tabcontent">
       <h2>Let's do things with Magic! ... But what?</h2>
         <a href="#Cards">Skip that Video...<br><a>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Xz3C9VbKA74?start=3&autoplay=1&mute=1&controls=0" title="Haha imagine..."></iframe>
-          <!-- have to mute embedded video or will not autoplay in chrome, firefox, or edge -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Xz3C9VbKA74?start=3&autoplay=1&mute=1&controls=0" title="Haha imagine..."></iframe>
+            <!-- have to mute embedded video or will not autoplay in chrome, firefox, or edge -->
         <h3 id="Cards" style="color:red;">Wait! Where did that card art go?</h3>
           <img src="https://images.saymedia-content.com/.image/t_share/MTc5MjE4MTk2NTczMDA1MzAw/blue-artwork-mtg.jpg" alt="Lunar Mystic, Human Wizard">
           <img src="https://i.pinimg.com/736x/11/0a/da/110adab6c686de0f3af0ba409c8e7f08--geek-dragon.jpg" alt="Shivan Dragon, Dragon">
@@ -95,7 +90,8 @@
           <img src="https://images.saymedia-content.com/.image/c_limit%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_700/MTc4MDA3MDE0NzIxOTIyNjY0/self-reviving-black-creatures-mtg.jpg" alt="Dread Wanderer, Zombie Jackal">
           <img src="https://www.trader-online.de/out/pictures/master/product/1/M20-E004.jpg" alt="Angel of Vitality, Angel">
           <img src="https://d2a6pxjvsktfgo.cloudfront.net/card-images/sets/en/hou/nicol-bolas-god-pharaoh-140.jpg" alt="Nicol Bolas, God-Pharoah">
-          <img src="https://usercontent2.hubstatic.com/14449309_f1024.jpg" alt="Repudiate/Replicate, Instant/Sorcery" style="width:550px; height:400px;">
+          <!-- inline styling takes precedence over external, internal, or block -->
+          <img src="https://images.saymedia-content.com/.image/t_share/MTc0NDYxMDE1OTAyNDYzMzM2/best-split-spells-mtg.jpg" alt="Repudiate/Replicate, Instant/Sorcery" style="width:550px; height:400px;">
     </div>
 
     <script>
